[tool.poetry]
name = "rxnmapper"
version = "0.1.4"
description = "Reaction atom-mapping from transfomers"
authors = ["Larry Bowden <shuttleboy24@yahoo.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.9"
transformers = "^4.17.0"
torch = "^1.11.0"
scipy = "^1.8.0"
rdkit-pypi = "^2021.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
